masthead.css
.masthead-image {
  background-size: cover;
  background-position: 50%;
  padding: 0;
  overflow: hidden;
  position: relative;
}

.masthead-image:before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #000;
  opacity: 0.1;
}

.masthead-image .inner {
  display: flex;
  display: -webkit-flex;
  align-items: center;
  -webkit-align-items: center;
  justify-content: center;
  -webkit-justify-content: center;
  -webkit-box-align: center;
}

.masthead-image h1:before {
  background-color: transparent;
}

.masthead-image h1,
.masthead-image h2 {
  text-transform: none;
  margin-top: 0;
  text-align: left;
  max-width: 100%;
  color: #fff;
  text-shadow: 0 0 1.5em black;
  padding: 0;
  margin: 0;
}

.masthead-image h1 span {
  font-family: 'Muller', 'Helvetica Neue', Helvetica, sans-serif;
  background-color: transparent;
  padding: 0px 0px 20px 0;
}

.masthead-image h2 {
  font-family: 'URW Antiqua Regular', Times, 'Times New Roman', serif;
  font-weight: 500;
}

.masthead-content.animated.fadeInUp {
  position: relative;
  transform: translateY(-50%);
}

@media only screen and (max-width: 413px) {
  h1 {
    font-size: 40px;
    letter-spacing: -1px;
  }
  h2 {
    font-size: 18px;
  }
}

@media only screen and (min-width: 414px) {
  h1 {
    font-size: 40px;
    letter-spacing: -2px;
  }
  h2 {
    font-size: 24px;
  }
}

@media only screen and (min-width: 768px) {
  .masthead-image .inner {
    height: 270px
  }
}

@media only screen and (max-width: 1439px) and (min-width: 768px) {
  h1 {
    font-size: 60px;
  }
  h2 {
    font-size: 28px;
  }
}

@media only screen and (min-width: 1024px) {
  .masthead-image .inner {
    height: 370px
  }
}

@media only screen and (min-width: 1280px) {
  .masthead-image .inner {
    height: 420px
  }
}

@media only screen and (min-width: 1440px) {
  .masthead-image .inner {
    height: 420px
  }
  h1 {
    font-size: 80px;
  }
  h2 {
    font-size: 36px;
  }
}

